--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "mongoose": "^8.17.1",
-    "next": "15.4.6",
-    "react": "19.1.0",
+    "next": "^14.2.30",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "19.1.0"
+    "react-dom": "^18.3.1",
+    "react-transition-group": "^4.4.5",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/xml2js": "^0.4.14",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5"
   }
 }
