--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
+    "chartjs": "^0.3.24",
     "mongoose": "^8.17.1",
     "next": "^14.2.30",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-transition-group": "^4.4.5",
     "xml2js": "^0.6.2"
