--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travel_planner",
+  "name": "employee_management_dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
     "chartjs": "^0.3.24",
+    "date-fns": "^4.1.0",
     "mongoose": "^8.17.1",
     "next": "^14.2.30",
     "react": "^18.3.1",
