--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
     "chartjs": "^0.3.24",
     "date-fns": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "next": "^14.2.30",
     "react": "^18.3.1",
@@ -27,6 +30,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/xml2js": "^0.4.14",
     "autoprefixer": "^10.4.21",
