nextauth 적용, 로그인, 로그아웃 기능 수정 미들웨어 설정, 권한 외 접근 차단 회원별 권한 적용해서 페이지 접근, 게시글 수정권한 조정중 네비게이션바 반응형 디자인 적용

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chartjs": "^0.3.24",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.542.0",
     "mongoose": "^8.17.1",
     "next": "^14.2.30",
     "next-auth": "^4.24.11",
