--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
-    "chart.js": "^4.5.0",
+    "chart.js": "4.4.0",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.542.0",
@@ -23,7 +23,7 @@
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
-    "react-chartjs-2": "^5.3.0",
+    "react-chartjs-2": "5.2.0",
     "react-dom": "^18.3.1",
     "react-transition-group": "^4.4.5",
     "xml2js": "^0.6.2",
